@@ -1,3 +1,8 @@
+2014-02-19  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/60232
+	* gfortran.dg/typebound_proc_33.f90: New.
+
 2014-02-19  Marek Polacek  <polacek@redhat.com>
 
 	PR c/60195
